your message here

--- a/index.html
+++ b/index.html
@@ -1716,7 +1716,7 @@
         <div class="tier-card tier-basic" data-reveal="up" data-delay="80">
           <div class="tier-left">
             <div class="tier-badge">· Basic ·</div>
-            <div class="tier-price">&lt; 250<span> scr</span></div>
+            <div class="tier-price">&lt; 250<span> pts</span></div>
           </div>
           <ul class="tier-features">
             <li>2.00% Instant Withdrawal Rate</li>
@@ -1732,7 +1732,7 @@
         <div class="tier-card tier-basic-plus" data-reveal="up" data-delay="180">
           <div class="tier-left">
             <div class="tier-badge">· Basic+ ·</div>
-            <div class="tier-price">250+<span> scr</span></div>
+            <div class="tier-price">250+<span> pts</span></div>
           </div>
           <ul class="tier-features">
             <li>Monthly Recap</li>
@@ -1749,7 +1749,7 @@
           <div class="gold-orb"></div>
           <div class="tier-left">
             <div class="tier-badge">◆ Divvum Gold ◆</div>
-            <div class="tier-price">500+<span> scr</span></div>
+            <div class="tier-price">500+<span> pts</span></div>
           </div>
           <ul class="tier-features">
             <li>Full Profile Statistics</li>
@@ -1772,7 +1772,7 @@
           <div class="black-orb"></div>
           <div class="tier-left">
             <div class="tier-badge">◆◆ Divvum Black ◆◆</div>
-            <div class="tier-price">1,000+<span> scr</span></div>
+            <div class="tier-price">1,000+<span> pts</span></div>
           </div>
           <ul class="tier-features">
             <li>1.35%-1.70% Instant Withdrawal Rate</li>
@@ -1807,7 +1807,7 @@
             <img src="https://i.pravatar.cc/150?img=33" alt="Alex" />
           </div>
           <div class="lb-pod-name">Alex</div>
-          <div class="lb-pod-score">982 scr</div>
+          <div class="lb-pod-score">982 pts</div>
           <div class="lb-pod-base">2</div>
         </div>
 
@@ -1817,7 +1817,7 @@
             <img src="https://i.pravatar.cc/150?img=11" alt="Brennan" />
           </div>
           <div class="lb-pod-name">Brennan</div>
-          <div class="lb-pod-score">1,204 scr</div>
+          <div class="lb-pod-score">1,204 pts</div>
           <div class="lb-pod-base">1</div>
         </div>
 
@@ -1826,7 +1826,7 @@
             <img src="https://i.pravatar.cc/150?img=45" alt="Sam" />
           </div>
           <div class="lb-pod-name">Sam</div>
-          <div class="lb-pod-score">847 scr</div>
+          <div class="lb-pod-score">847 pts</div>
           <div class="lb-pod-base">3</div>
         </div>
 
@@ -1840,7 +1840,7 @@
           <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=7" alt="Chris" /></div>
           <span class="lb-rname">Chris</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:61%"></div></div>
-          <span class="lb-rscore">731 scr</span>
+          <span class="lb-rscore">731 pts</span>
         </div>
 
         <div class="lb-row" data-reveal="right" data-delay="180">
@@ -1848,7 +1848,7 @@
           <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=15" alt="Derrick" /></div>
           <span class="lb-rname">Sophia</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:53%"></div></div>
-          <span class="lb-rscore">644 scr</span>
+          <span class="lb-rscore">644 pts</span>
         </div>
 
         <div class="lb-row" data-reveal="right" data-delay="260">
@@ -1856,7 +1856,7 @@
           <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=26" alt="Morgan" /></div>
           <span class="lb-rname">Morgan</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:44%"></div></div>
-          <span class="lb-rscore">528 scr</span>
+          <span class="lb-rscore">528 pts</span>
         </div>
 
         <div class="lb-row" data-reveal="right" data-delay="340">
@@ -1864,7 +1864,7 @@
           <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=48" alt="Luciano" /></div>
           <span class="lb-rname">Taylor</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:37%"></div></div>
-          <span class="lb-rscore">441 scr</span>
+          <span class="lb-rscore">441 pts</span>
         </div>
 
         <div class="lb-row" data-reveal="right" data-delay="420">
@@ -1872,7 +1872,7 @@
           <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=57" alt="Jamie" /></div>
           <span class="lb-rname">James</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:29%"></div></div>
-          <span class="lb-rscore">348 scr</span>
+          <span class="lb-rscore">348 pts</span>
         </div>
 
         <div class="lb-row" data-reveal="right" data-delay="500">
@@ -1880,7 +1880,7 @@
           <div class="lb-ravatar"><img src="https://i.pravatar.cc/150?img=62" alt="Drew" /></div>
           <span class="lb-rname">Drew</span>
           <div class="lb-rbar"><div class="lb-rbar-fill" style="width:21%"></div></div>
-          <span class="lb-rscore">254 scr</span>
+          <span class="lb-rscore">254 pts</span>
         </div>
 
       </div>
